--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Ethics -- China'
 - !lcc 'BJ'
 - !lcsh 'Conduct of life'
+- GITenberg
 title: 顔氏家訓
 url: http://www.gutenberg.org/ebooks/25365
